# lx-music-api-server

./: 404.html  LICENSE  README.md  index.html  main.py  pnpm-lock.yaml  pyproject.toml  sitemap.xml
.github/: dependabot.yml
assets/: 404.html-s4nE5KTB.js  api.html-CZ5bnyd2.js  app-BWmVz1M3.js  deploy-linux.html-CYvI5_g4.js  deploy-windows.html-BXUPej7-.js  index.html-8aoigYbn.js  index.html-CoD0vmVa.js  index.html-DqVo6Dt2.js  index.html-naZUT31w.js  style-Blc0GikP.css
common/: config.py  default.py  variable.py
deploy/: deploy-linux.html  deploy-windows.html  index.html
guide/: index.html
guide/api/: api.html  index.html
src/deploy/: deploy-windows.md
src/guide/: README.md
src/guide/api/: api.md
