[project]
name = "lx-music-api-server"
version = "2.0.2"
description = "LX Music Api Server"
authors = [
    {name = "helloplhm-qwq",email = "helloplhm-qwq@outlook.com"},
    {name = "ikun0014",email = "ikun0014@qq.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ujson (>=5.10.0,<6.0.0)",
    "logzero (>=1.7.0,<2.0.0)",
    "pycryptodome (>=3.22.0,<4.0.0)",
    "xmltodict (>=0.14.2,<0.15.0)",
    "redis (>=5.2.1,<6.0.0)",
    "aiohttp (>=3.11.18,<4.0.0)",
    "requests (>=2.32.3,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "mirrors"
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"
priority = "primary"

